--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,40 @@
+#hmc.csuohio.edu
 img/
 downloads/
 src/
+
+#Plone
+*~
+*.pyc
+*.pyo
+*.tmp*
+*.mo
+*.egg
+*.EGG
+*.egg-info
+*.EGG-INFO
+*.kpf
+*.swp
+*.wpr
+.*.cfg
+.installed.cfg
+.mr.developer.cfg
+.hg/
+.bzr/
+.svn/
+.project
+.pydevproject
+bin/
+build/
+develop-eggs/
+downloads/
+eggs/
+fake-eggs/
+parts/
+dist/
+var/
+
+
+
+# OSX
+.DS_Store
