Started adding the configuration product.

--- a/develop.cfg
+++ b/develop.cfg
@@ -20,7 +20,7 @@
 #
 #     * zopeskel, a Python package skeleton generator with support
 #       for common Plone development packages like content-type
-#       and theme packages.
+#       and config packages.
 #
 #     * mr.developer, a tool that automatically checks out source for
 #       add ons from a versioning system, then adds them to your
@@ -56,11 +56,12 @@
 # kind = The kind of repository. Currently supported are one of svn (>= 1.5), hg, git, cvs or fs.
 #
 [sources]
-# Examples: to check out plonetheme.sunburst from Plone's svn, use:
-# plonetheme.sunburst = svn https://svn.plone.org/svn/plone/plonetheme.sunburst/trunk
+# Examples: to check out ploneconfig.sunburst from Plone's svn, use:
+# ploneconfig.sunburst = svn https://svn.plone.org/svn/plone/ploneconfig.sunburst/trunk
 #
 # To use a python package that is being developed in your src subdirectory, use:
 # myproduct.betterplone = fs myproduct.betterplone
+hmc.config = fs hmc.config
 
 
 [buildout]
@@ -72,7 +73,8 @@
 # Base eggs are automatically included
 #
 test-packages =
-#    plonetheme.sunburst
+#    ploneconfig.sunburst
+    hmc.config
 
 
 ############################################
@@ -111,8 +113,18 @@ extensions +=
     mr.developer
 
 eggs +=
-    Products.DocFinderTab
     plone.reload
+
+#Products.DocFinderTab
+# I'm getting this error if I try to install DocFinderTab
+#
+# Getting distribution for 'Products.DocFinderTab==1.0.5'.
+# error: Couldn't find a setup script in /home/moorepants/Websites/hmc.csuohio.edu/var/cache/downloads/dist/Products.DocFinderTab-1.0.5.zip
+# An error occurred when trying to install Products.DocFinderTab 1.0.5. Look above this message for any errors that were output by easy_install.
+# While:
+#  Installing instance.
+#    Getting distribution for 'Products.DocFinderTab==1.0.5'.
+# Error: Couldn't install: Products.DocFinderTab 1.0.5
 
 parts +=
     test
@@ -124,6 +136,9 @@ always-checkout = force
 sources = sources
 auto-checkout = *
 
+eggs-directory = ${buildout:directory}/var/cache/eggs
+download-cache = ${buildout:directory}/var/cache/downloads
+extends-cache = ${buildout:directory}/var/cache/extends
 
 [test]
 recipe = zc.recipe.testrunner
@@ -149,7 +164,7 @@ eggs =
     Paste
     PasteDeploy
     PasteScript
-    zopeskel.diazotheme
+    zopeskel.diazoconfig
     zopeskel.dexterity
     zest.releaser
     ${buildout:eggs}
