Adde cron job for backups.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -154,6 +154,7 @@ parts =
     unifiedinstaller
     precompiler
     setpermissions
+    backupcronjob
 
 ############################################
 # Major Parts
@@ -167,6 +168,13 @@ parts =
 recipe = plone.recipe.zope2instance
 http-address = 8080
 
+############################################
+# Runs the backup scripts only on the server
+# ------------------------------------------
+[backupcronjob]
+recipe = z3c.recipe.usercrontab
+times = 1 3 * * *
+command = ${buildout:directory}/bin/backup
 
 ############################################
 # Versions Specification
