Changed config back to theme.

--- a/develop.cfg
+++ b/develop.cfg
@@ -20,7 +20,7 @@
 #
 #     * zopeskel, a Python package skeleton generator with support
 #       for common Plone development packages like content-type
-#       and config packages.
+#       and theme packages.
 #
 #     * mr.developer, a tool that automatically checks out source for
 #       add ons from a versioning system, then adds them to your
@@ -56,8 +56,8 @@
 # kind = The kind of repository. Currently supported are one of svn (>= 1.5), hg, git, cvs or fs.
 #
 [sources]
-# Examples: to check out ploneconfig.sunburst from Plone's svn, use:
-# ploneconfig.sunburst = svn https://svn.plone.org/svn/plone/ploneconfig.sunburst/trunk
+# Examples: to check out plonetheme.sunburst from Plone's svn, use:
+# plonetheme.sunburst = svn https://svn.plone.org/svn/plone/plonetheme.sunburst/trunk
 #
 # To use a python package that is being developed in your src subdirectory, use:
 # myproduct.betterplone = fs myproduct.betterplone
@@ -73,7 +73,7 @@ hmc.config = fs hmc.config
 # Base eggs are automatically included
 #
 test-packages =
-#    ploneconfig.sunburst
+#    plonetheme.sunburst
     hmc.config
 
 
@@ -164,7 +164,7 @@ eggs =
     Paste
     PasteDeploy
     PasteScript
-    zopeskel.diazoconfig
+    zopeskel.diazotheme
     zopeskel.dexterity
     zest.releaser
     ${buildout:eggs}
