--- a/buildout.cfg
+++ b/buildout.cfg
@@ -173,7 +173,7 @@ http-address = 8080
 # ------------------------------------------
 [backupcronjob]
 recipe = z3c.recipe.usercrontab
-times = 1 3 * * *
+times = 1 3 1,16 * *
 command = ${buildout:directory}/bin/backup
 
 ############################################
