--- a/buildout.cfg
+++ b/buildout.cfg
@@ -195,6 +195,7 @@ plone.recipe.precompiler = 0.6
 plone.recipe.unifiedinstaller = 4.3.1
 Products.DocFinderTab = 1.0.5
 Products.PloneHotfix20130618 = 1.3
+z3c.recipe.usercrontab = 1.1
 ZopeSkel = 2.21.2
 zopeskel.dexterity = 1.5.2
 zopeskel.diazotheme = 1.1
