Upped the nginx upload size to 10 mb.

--- a/hmc.csuohio.edu.conf
+++ b/hmc.csuohio.edu.conf
@@ -14,6 +14,7 @@ upstream plone {
 
 server {
 
+    client_max_body_size 10M;
     listen 80;
     server_name 54.221.204.249;
     access_log /var/log/nginx/hmc.csuohio.edu.access.log;
