New domain name hmc.csuohio.edu.

--- a/hmc.csuohio.edu.conf
+++ b/hmc.csuohio.edu.conf
@@ -4,19 +4,11 @@ upstream plone {
     server 127.0.0.1:8080;
 }
 
-# Redirect all www-less traffic to the www.site.com domain
-# (you could also do the opposite www -> non-www domain)
-#server {
-    #listen 80;
-    #server_name yoursite.com;
-    #rewrite ^/(.*) http://www.yoursite.com/$1 permanent;
-#}
-
 server {
 
-    client_max_body_size 10M;
+    client_max_body_size 10M; # limits upload to 10 mb
     listen 80;
-    server_name 54.221.204.249;
+    server_name hmc.csuohio.edu;
     access_log /var/log/nginx/hmc.csuohio.edu.access.log;
     error_log /var/log/nginx/hmc.csuohio.edu.error.log;
 
@@ -24,6 +16,6 @@ server {
     # -> this is what Plone sees as the "real" HTTP request URL.
     # "Plone" in the URL is your site id (case sensitive)
     location / {
-          proxy_pass http://plone/VirtualHostBase/http/54.221.204.249:80/Plone/VirtualHostRoot/;
+          proxy_pass http://plone/VirtualHostBase/http/hmc.csuohio.edu/Plone/VirtualHostRoot/;
     }
 }
