Updated buildout with 20131210 hotfix.
See:

https://plone.org/security/20131210

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -77,6 +77,7 @@ eggs =
     Plone
     Pillow
     Products.PloneHotfix20130618
+    Products.PloneHotfix20131210
 
 ############################################
 # ZCML Slugs
