--- a/buildout.cfg
+++ b/buildout.cfg
@@ -175,7 +175,7 @@ http-address = 8080
 [backupcronjob]
 recipe = z3c.recipe.usercrontab
 times = 1 3 1,16 * *
-command = ${buildout:directory}/bin/backup
+command = ${buildout:directory}/bin/backup && bash /home/moorepants/copy_backup_to_home.sh
 
 ############################################
 # Versions Specification
