--- a/buildout.cfg
+++ b/buildout.cfg
@@ -174,7 +174,8 @@ http-address = 8080
 # ------------------------------------------
 [backupcronjob]
 recipe = z3c.recipe.usercrontab
-times = 1 3 1,16 * *
+#times = 1 3 1,16 * *
+times = 0 * * * *
 command = ${buildout:directory}/bin/backup && bash /home/moorepants/copy_backup_to_home.sh
 
 ############################################
