--- a/buildout.cfg
+++ b/buildout.cfg
@@ -78,6 +78,7 @@ eggs =
     Pillow
     Products.PloneHotfix20130618
     Products.PloneHotfix20131210
+    quintagroup.dropdownmenu
 
 ############################################
 # ZCML Slugs
